got homepage sorta done

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="index.css" />
   
-<link rel="preload" href="/index-89d1f03d24fadf41_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/index-89d1f03d24fadf41.js"></head>
+    <link rel="preload" href="/index-89d1f03d24fadf41_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+    <link rel="modulepreload" href="/index-89d1f03d24fadf41.js">
+</head>
 <body><script type="module">import init from '/index-89d1f03d24fadf41.js';init('/index-89d1f03d24fadf41_bg.wasm');</script></body></html>
