testing out if things work on pages

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         }
     </style>
 
-    <link rel="stylesheet" href="index.css" />
-  
+    <link rel="stylesheet" href="index.css">
+
     <link rel="preload" href="/index-89d1f03d24fadf41_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
     <link rel="modulepreload" href="/index-89d1f03d24fadf41.js">
 </head>
