--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
 
 <link rel="preload" href="/index-9c6ee49af3f534b2_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
 <link rel="modulepreload" href="/index-9c6ee49af3f534b2.js"></head>
-<body><script type="module">import init from 'index-9c6ee49af3f534b2.js';init('index-9c6ee49af3f534b2_bg.wasm');</script><script type="module">import init from '/index-9c6ee49af3f534b2.js';init('/index-9c6ee49af3f534b2_bg.wasm');</script></body></html>
+<body><script type="module">import init from '/index-9c6ee49af3f534b2.js';init('/index-9c6ee49af3f534b2_bg.wasm');</script></body></html>
